--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,39 @@
  *{
    box-sizing: border-box;
  }
+.wrapper{
+  display: flex;
+}
+ .side-bar{
+   background-color: #253141;
+   width:300px;
+   height: 100vh;
+ }
+ .main-chat{
+   background-color: #ffffff;
+   width: calc(100vw - 300px);
+ }
+ .side-bar-head{
+   height: 100px;
+   padding: 0 20px;
+ }
+ .rooms{
+   background-color:#2F3E51;
+   height: calc(100vh - 100px);
+   padding: 0 20px;
+ }
+ .chat-header{
+   background-color: #FFFFFF;
+   height: 100px;
+   padding: 0 40px;
+}
+.messages{
+  background-color: #FAFAFA;
+  height: calc(100vh - 100px - 90px);
+  padding: 46px 40px 0;
+}
+.form{
+  background-color: #DDDDDD;
+  height: 90px;
+  padding: 20px 40px;
+}
