--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,11 +32,35 @@
  .side-bar-head{
    height: 100px;
    padding: 0 20px;
+   background-color: #253141;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+ }
+ .username-link a{
+   text-decoration: none;
+   color: #FAFAFA;
+   font-size: 16px;
+ }
+ .create-chat a{
+  text-decoration: none;
+  color: deepskyblue;
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
  }
  .rooms{
    background-color:#2F3E51;
    height: calc(100vh - 100px);
    padding: 0 20px;
+   overflow: scroll;
+ }
+ .room{
+   padding: 20px 0 40px;
+ }
+ .room-name a{
+   color: white;
+   text-decoration: none;
  }
  .chat-header{
    background-color: #FFFFFF;
