--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,19 +116,19 @@
   padding: 20px 40px;
   display: flex;
 }
-.submit-group{
+.form-input{
   height: 50px;
   width: 100%;
   display: flex;
   background-color: white;
 }
-.submit-text{
+.form-message{
   padding: 0 0 0 10px;
   height: 50px;
   border: none;
   width: 100%;
 }
-.submit-btn{
+.form-submit{
  background-color: #38AEF0;
  font-size: 16px;
  color: white;
