--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -38,13 +38,14 @@
   </div>
  </div>
 </div>
-<div class="form">
-  <div class="submit-group">
-   <input type="text" placeholder="type a message" class="submit-text">
-   <label class="form-image">
+
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+ <div class="form-input">
+  <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+  <label class="form-image">
     <span class="image-file">画像</span>
-    <input type="file" class="hidden">
-   </label>
-  </div>
-  <input type="submit" class="submit-btn" value="送信">
-</div>
+    <%= f.file_field :image, class: 'hidden' %>
+  </label>
+ </div>
+ <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
