--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,32 +11,7 @@
  </div>
 </div>
 <div class="messages">
- <div class="each-message">
-  <div class="sender-name-date">
-   <div class="sender-name">
-   Tom
-   </div>
-   <div class="send-date">
-   2020/3/31(Wed) 12:43:30
-   </div>
-  </div>
-  <div class="send-messages">
-  おはよう
-  </div>
- </div>
- <div class="each-message">
-  <div class="sender-name-date">
-   <div class="sender-name">
-   Tom
-   </div>
-   <div class="send-date">
-   2020/3/31(Wed) 12:43:30
-   </div>
-  </div>
-  <div class="send-messages">
-  おはよう
-  </div>
- </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
