チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat-header">
  <div class="header-title">
   <div class="chat-name">
-   hugahuga
+   <%= @room.name %>
   </div> 
  </div> 
  <div class="end-chat">
